    o 27.06.2003: Version 2.0
    o 07.03.2003: Version 1.1
    o 06.12.2002: Version 1.0

_____________________________________________________________________________

 Changes from 4.11 to 5.0
_____________________________________________________________________________

BEAM 5.0 is a new major version.

Complete list of BEAM 5.0 bug fixes and improvements

New BEAM Features

Improvements

[BEAM-1588] Show close button on internal frames' tabs
[BEAM-1587] Allow closing internal frames by click with middle mouse button
[BEAM-1459] Allow aggregating pixel values even if not all pixels of the window are valid
[BEAM-1513] BEAM shall enable users to use Modified Julian Date (MJD) in band arithmetics

Bugs

[BEAM-1287] Default RGB profile of MERIS L1b is Landsat but should be Tristimulus
[BEAM-1452] Log-scaling is not correctly applied in scatter plot
[BEAM-1496] ApiDoc is generated with wrong version
[BEAM-1569] Documentation for 'statistical accuracy' missing
[BEAM-1190] Export button in the mask manager does not export geometry masks
[BEAM-1497] Command 'Time Series as Google Earth KMZ' misplaced in tools menu
[BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges
[BEAM-1568] Numbers are displayed with too little #places after the comma
[BEAM-1508] No progress indication in VISAT when writing files
[BEAM-1514] ProductUtils.getScanLineTime fails for products with height 1
[BEAM-1564] Binning operator causes NPE with invalid graph XML

_____________________________________________________________________________

 Changes from 4.10.3 to 4.11
_____________________________________________________________________________

BEAM 4.11 is a release featuring lots of new tools. The Time Series Tools has been included into BEAM, which allows users
to create, inspect, and analyse time series of EO data. The new Temporal Percentile Operator has been introduced; it